--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -176,10 +176,10 @@
                  <normaloff>:/pref/chart.png</normaloff>:/pref/chart.png</iconset>
                </property>
                <property name="checkable">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
                <property name="checked">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
                <property name="flat">
                 <bool>true</bool>
@@ -187,7 +187,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="buttonPizza">
+              <widget class="QPushButton" name="buttonPie">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -202,7 +202,7 @@
                  <normaloff>:/pref/pizza.png</normaloff>:/pref/pizza.png</iconset>
                </property>
                <property name="checkable">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
                <property name="checked">
                 <bool>false</bool>
