--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>963</width>
-    <height>646</height>
+    <width>1020</width>
+    <height>648</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -227,13 +227,27 @@
           </widget>
          </item>
          <item>
-          <widget class="QTableView" name="tableView">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
+          <widget class="QTableWidget" name="tableWidget">
+           <column>
+            <property name="text">
+             <string>Format</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Number</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Size</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Average size</string>
+            </property>
+           </column>
           </widget>
          </item>
         </layout>
@@ -248,7 +262,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>963</width>
+     <width>1020</width>
      <height>32</height>
     </rect>
    </property>
