--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -228,6 +228,12 @@
          </item>
          <item>
           <widget class="QTableWidget" name="tableWidget">
+           <attribute name="horizontalHeaderVisible">
+            <bool>true</bool>
+           </attribute>
+           <attribute name="verticalHeaderVisible">
+            <bool>false</bool>
+           </attribute>
            <column>
             <property name="text">
              <string>Format</string>
